--- a/index.html
+++ b/index.html
@@ -27,9 +27,11 @@
             </ul>
         </div>
       </div>
+<video src="https://www.youtube.com/watch?v=v2sWlmCrfns" autoplay poster="posterimage.jpg">
 
+</video>
         <div class="hjem">
-            <h3>Dette er min besvarelse for Informasjons Teknologi 2 eksamen 2019. Over er det en navbar som du kan klikke deg rundt til de forskjellige oppgavene.</h3>
+            <h3></h3>
         </div>
 
 
@@ -48,7 +50,7 @@
 
         <!-- SLUTT OPPGAVE 3-->
 
-    
+
     <script type="text/javascript" src="scripts/javascript.js"></script>
     <script type="text/javascript" src="scripts/bildeinformasjon.js"></script>
     <script type="text/javascript" src="scripts/pikselberegning.js"></script>
