Endring i navn til team01

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="sideInnpakning">
         <div class="navbar navbar-dark bg-dark ">
-            <a class="navbar-brand mr-5" href="#">Kandidatnr. 482YKV-V</a>
+            <a class="navbar-brand mr-5" href="#">Team 01</a>
             <ul class="navbar-nav mr-auto navbarTopp">
                 <li class="nav-item mr-5 ">
                     <a class="nav-link" onclick="sideToggle('hjem')">Hovedside</a>
