--- a/faktaside.html
+++ b/faktaside.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
-<html>
-
-<head>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
     <title>Cybersikkerhet og Teamarbeid prosjekt team 01</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"> <!-- Bootstrap^-->
     <link rel="stylesheet" type="text/css" href="stilark/main.css">
-</head>
-
-<body>
+  </head>
+  <body>
     <div class="sideInnpakning">
         <div class="navbar navbar-dark bg-dark ">
             <a class="navbar-brand mr-5" href="#">Team 01</a>
@@ -26,37 +25,6 @@
                 </li>
             </ul>
         </div>
-        <video src="https://www.youtube.com/watch?v=v2sWlmCrfns" autoplay poster="posterimage.jpg">
-
-        </video>
       </div>
-
-        <div class="hjem">
-            <h3></h3>
-
-        </div>
-
-
-        <!-- OPPGAVE 1-->
-
-        <!-- SLUTT OPPGAVE 1-->
-
-
-		<!-- OPPGAVE 2-->
-
-        <!--SLUTT  OPPGAVE 2-->
-
-
-
-        <!-- OPPGAVE 3-->
-
-        <!-- SLUTT OPPGAVE 3-->
-
-
-    <script type="text/javascript" src="scripts/javascript.js"></script>
-    <script type="text/javascript" src="scripts/bildeinformasjon.js"></script>
-    <script type="text/javascript" src="scripts/pikselberegning.js"></script>
-    <script type="text/javascript" src="scripts/hytte.js"></script>
-</body>
-
+  </body>
 </html>
