--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="sideInnpakning">
         <div class="navbar navbar-dark bg-dark ">
-            <a class="navbar-brand mr-5" href="#">Team 01</a>
+            <a class="navbar-brand mr-5" href="index.html">Team 01</a>
             <ul class="navbar-nav mr-auto navbarTopp">
                 <li class="nav-item mr-5 ">
                     <a class="nav-link" href="faktaside.html">Hovedside</a>
@@ -29,6 +29,9 @@
         <video src="https://www.youtube.com/watch?v=v2sWlmCrfns" autoplay poster="posterimage.jpg">
 
         </video>
+        <iframe width="420" height="315"
+src="https://www.youtube.com/watch?v=v2sWlmCrfns">
+</iframe>
       </div>
 
         <div class="hjem">
