--- a/index.html
+++ b/index.html
@@ -29,9 +29,8 @@
         <video src="https://www.youtube.com/watch?v=v2sWlmCrfns" autoplay poster="posterimage.jpg">
 
         </video>
-        <iframe width="420" height="315"
-src="https://www.youtube.com/watch?v=v2sWlmCrfns">
-</iframe>
+        <iframe width="420" height="345" src="https://www.youtube.com/embed/tgbNymZ7vqY">
+        </iframe>
       </div>
 
         <div class="hjem">
