--- a/index.html
+++ b/index.html
@@ -26,11 +26,7 @@
                 </li>
             </ul>
         </div>
-        <video src="https://www.youtube.com/watch?v=v2sWlmCrfns" autoplay poster="posterimage.jpg">
-
-        </video>
-        <iframe width="420" height="345" src="https://www.youtube.com/embed/tgbNymZ7vqY">
-        </iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/sJsq5uP7IjI" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
 
         <div class="hjem">
