Fikset stil på knapp og la til en slags oversikt på hovedsiden om de forskjellige sidene

--- a/index.html
+++ b/index.html
@@ -3,30 +3,65 @@
 
 <head>
     <title>Cybersikkerhet og Teamarbeid prosjekt team 01</title>
+    <link rel="stylesheet" href="/stilark/bootstrap.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"> <!-- Bootstrap^-->
     <link rel="stylesheet" type="text/css" href="stilark/main.css">
 </head>
 
 <body>
     <div class="sideInnpakning">
-        <div class="navbar navbar-dark bg-dark ">
+        <div class="navbar navbar-dark bg-dark">
             <a class="navbar-brand mr-5" href="index.html">Team 01</a>
-            <ul class="navbar-nav mr-auto navbarTopp">
+            <ul class="navbar-nav mr-auto navbarTopp" style="">
                 <li class="nav-item mr-5 ">
-                    <a class="nav-link" href="faktaside.html">Hovedside</a>
+                    <a class="nav-link" href="index.html">Hovedside</a>
                 </li>
                 <li class="nav-item mr-5">
-                    <a class="nav-link" onclick="sideToggle('BildeInformasjonsDiv')">Oppgave 1 / Bildeinformasjon</a>
+                    <a class="nav-link" href="faktaside.html">Fakta</a>
                 </li>
                 <li class="nav-item mr-5">
-                    <a class="nav-link" onclick="sideToggle('PikselberegningerDiv')">Oppgave 2 / Pikselberegninger</a>
+                    <a class="nav-link" href="quiz.html">Quiz</a>
                 </li>
                 <li class="nav-item mr-5">
-                    <a class="nav-link" onclick="sideToggle('hytteAktivitetDiv')">Oppgave 3 / Hytte til hytte</a>
+                    <a class="nav-link" href="kilder.html">Kilder</a>
                 </li>
             </ul>
         </div>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/sJsq5uP7IjI" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <div class="Introduksjon2 jumbotron" style="text-align:center;">
+          <div class="container">
+            <h1 class="display-3">Overskrift Team01</h1>
+            <p>Dette er en side ment for å informere lærere om hvordan de kan sikre seg på data / over nett, uaiowgnfwaognaowi awgnwaign aiwgnawi aiwgunawiugna awgawiugnwaui mer skrift / generell introduksjon</p>
+
+          </div>
+        </div>
+
+          <div class="container">
+            <div class="row">
+              <div class="col-md-4">
+                <h2>Video</h2>
+                <p>På denne siden finner du en video vi har laget, som tar for seg alt av informasjon om hva du burde sikre deg mot på arbeidsplassen, og hva slags sikkerhetstiltak du burde gjøre for å sørge for dette</p>
+                  <p> <a href="hovedside.html" class="btn btn-secondary" role="button" >Gå til side</a> </p>
+              </div>
+              <div class="col-md-4">
+                <h2>Faktaside</h2>
+                <p>Hvis du ønsker å få ne mer detaljert forklaring av de forskjellige temaene som videoen tok for seg kan du gå inn på denne siden og lese mer om det. I tillegg har vi lagt ved noen små spørsmål mens du leser for å sørge for at du har fått med deg det du har lest</p>'
+                <p> <a href="faktaside.html" class="btn btn-secondary" role="button" >Gå til side</a> </p>
+              </div>
+              <div class="col-md-4">
+                <h2>Quiz</h2>
+                <p>Her har vi samlet en rekke spørsmål om infoen vi har på siden vår. Om du vil bruke denne quizen som en del av å lære deg tiltakene eller som en slags "prøve" til slutt er opp til deg.</p>
+                <p> <a href="quiz.html" class="btn btn-secondary" role="button" >Gå til side</a> </p>
+              </div>
+
+            </div>
+
+          </div>
+
+
+        </div>
+        <div class="hovedsideVideo">
+          <iframe width="800" height="450" src="" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
       </div>
 
         <div class="hjem">
