- Lagt til cover.css for å lage en video-side

--- a/hovedside.html
+++ b/hovedside.html
@@ -5,6 +5,7 @@
     <title>Cybersikkerhet og Teamarbeid prosjekt team 01</title>
     <link rel="stylesheet" href="/stilark/bootstrap.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"> <!-- Bootstrap^-->
+    <link rel="stylesheet" href="/stilark/cover.css">
     <link rel="stylesheet" type="text/css" href="stilark/main.css">
 </head>
 
@@ -27,17 +28,25 @@
                 </li>
             </ul>
         </div>
-        
+      </div>
 
           <div class="container">
+            <div class="site-wrapper" style="margin-top:3% !important;">
+              <div class="site-wrapper-inner">
+                <div class="cover-container" style="display:flex !important;">
 
+                  <iframe style="margin: auto;"width="800" height="450" src="https://www.youtube.com/embed/Uzv9mChUKLg" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+                </div>
+
+              </div>
+
+            </div>
 
           </div>
 
 
-        </div>
 
-      </div>
 
 
 
