La til faktaside filer

--- a/faktaside.html
+++ b/faktaside.html
@@ -2,66 +2,113 @@
 <html>
 
 <head>
-    <title>Cybersikkerhet og Teamarbeid prosjekt team 01</title>
-    <link rel="stylesheet" href="/stilark/bootstrap.min.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"> <!-- Bootstrap^-->
-    <link rel="stylesheet" type="text/css" href="stilark/main.css">
+  <title>Cybersikkerhet og Teamarbeid prosjekt team 01</title>
+  <link rel="stylesheet" href="/stilark/bootstrap.min.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"> <!-- Bootstrap^-->
+  <link rel="stylesheet" type="text/css" href="stilark/main.css">
+  <link rel="stylesheet" href="stilark/blog.css">
 </head>
 
 <body>
-    <div class="sideInnpakning">
-        <div class="navbar navbar-dark bg-dark">
-            <a class="navbar-brand mr-5" href="index.html">Team 01</a>
-            <ul class="navbar-nav mr-auto navbarTopp" style="">
-                <li class="nav-item mr-5 ">
-                    <a class="nav-link" href="index.html">Hovedside</a>
-                </li>
-                <li class="nav-item mr-5">
-                    <a class="nav-link" href="faktaside.html">Fakta</a>
-                </li>
-                <li class="nav-item mr-5">
-                    <a class="nav-link" href="quiz.html">Quiz</a>
-                </li>
-                <li class="nav-item mr-5">
-                    <a class="nav-link" href="kilder.html">Kilder</a>
-                </li>
-            </ul>
-        </div>
-        
+  <div class="sideInnpakning">
+    <div class="navbar navbar-dark bg-dark">
+      <a class="navbar-brand mr-5" href="index.html">Team 01</a>
+      <ul class="navbar-nav mr-auto navbarTopp" style="">
+        <li class="nav-item mr-5 ">
+          <a class="nav-link" href="index.html">Hovedside</a>
+        </li>
+        <li class="nav-item mr-5">
+          <a class="nav-link" href="faktaside.html">Fakta</a>
+        </li>
+        <li class="nav-item mr-5">
+          <a class="nav-link" href="quiz.html">Quiz</a>
+        </li>
+        <li class="nav-item mr-5">
+          <a class="nav-link" href="kilder.html">Kilder</a>
+        </li>
+      </ul>
+    </div>
 
-          <div class="container">
 
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-8 blog-main" style="margin:auto !important;">
+          <div class="blog-post">
+            <div class="avsnitt">
+              <h3 style="text-align:center;">Avsnitt 1</h3>
+              <p>Morbi laoreet et odio non efficitur. Nulla nec leo sem. Nunc mattis odio ut orci dictum efficitur. Curabitur ac metus in erat semper malesuada ac ac elit. Donec ultrices dui id orci scelerisque sollicitudin. Maecenas eget augue nec
+                odio consequat ultrices eu nec ex. Vivamus pellentesque congue sapien, quis placerat leo auctor sit amet. In rutrum purus vitae odio cursus, eget consequat purus euismod. Quisque aliquam ut augue eget porta. Donec pulvinar mi eget
+                blandit gravida. Vivamus aliquet convallis augue id condimentum. Vestibulum a ultricies nisi, vel placerat ante. Phasellus sed metus neque.</p>
+            </div>
+
+            <div class="avsnittQuiz">
+
+              <h4>Avsnitt 1 quiz</h4>
+
+              <input type="radio" class="quiz1" name="1" value="1">1<br>
+              <input type="radio" class="quiz1" name="1" value="2">2<br>
+              <input type="radio" class="quiz1" name="1" value="3">3<br>
+              <button type="button" name="button" onclick="sjekksvar()">Sjekk svar</button>
+
+            </div>
 
           </div>
+          <div class="blog-post">
+            <div class="avsnitt">
+              <h3 style="text-align:center;">Avsnitt 2</h3>
+              <p>Morbi laoreet et odio non efficitur. Nulla nec leo sem. Nunc mattis odio ut orci dictum efficitur. Curabitur ac metus in erat semper malesuada ac ac elit. Donec ultrices dui id orci scelerisque sollicitudin. Maecenas eget augue nec
+                odio consequat ultrices eu nec ex. Vivamus pellentesque congue sapien, quis placerat leo auctor sit amet. In rutrum purus vitae odio cursus, eget consequat purus euismod. Quisque aliquam ut augue eget porta. Donec pulvinar mi eget
+                blandit gravida. Vivamus aliquet convallis augue id condimentum. Vestibulum a ultricies nisi, vel placerat ante. Phasellus sed metus neque.</p>
+            </div>
 
+            <div class="avsnittQuiz">
 
+              <h4>Avsnitt 2 quiz</h4>
+
+              <input type="radio" class="quiz1" name="1" value="1">1<br>
+              <input type="radio" class="quiz1" name="1" value="2">2<br>
+              <input type="radio" class="quiz1" name="1" value="3">3<br>
+              <button type="button" name="button" onclick="sjekksvar()">Sjekk svar</button>
+
+            </div>
+
+          </div>
         </div>
-
       </div>
 
 
 
 
-        <!-- OPPGAVE 1-->
-
-        <!-- SLUTT OPPGAVE 1-->
+    </div>
 
 
-		<!-- OPPGAVE 2-->
+  </div>
 
-        <!--SLUTT  OPPGAVE 2-->
+  </div>
 
 
 
-        <!-- OPPGAVE 3-->
 
-        <!-- SLUTT OPPGAVE 3-->
+  <!-- OPPGAVE 1-->
+
+  <!-- SLUTT OPPGAVE 1-->
 
 
-    <script type="text/javascript" src="scripts/javascript.js"></script>
-    <script type="text/javascript" src="scripts/bildeinformasjon.js"></script>
-    <script type="text/javascript" src="scripts/pikselberegning.js"></script>
-    <script type="text/javascript" src="scripts/hytte.js"></script>
+  <!-- OPPGAVE 2-->
+
+  <!--SLUTT  OPPGAVE 2-->
+
+
+
+  <!-- OPPGAVE 3-->
+
+  <!-- SLUTT OPPGAVE 3-->
+
+
+  <script type="text/javascript" src="scripts/javascript.js"></script>
+  <script type="text/javascript" src="scripts/avsnittquiz.js"></script>
+  <script type="text/javascript" src="scripts/pikselberegning.js"></script>
+  <script type="text/javascript" src="scripts/hytte.js"></script>
 </body>
 
 </html>
