Fikser bootstrap problem

--- a/hovedside.html
+++ b/hovedside.html
@@ -3,8 +3,7 @@
 
 <head>
     <title>Cybersikkerhet og Teamarbeid prosjekt team 01</title>
-    <link rel="stylesheet" href="/stilark/bootstrap.min.css">
-
+    <link rel="stylesheet" href="stilark/bootstrap.min.css">
     <link rel="stylesheet" href="stilark/cover.css">
     <link rel="stylesheet" type="text/css" href="stilark/main.css">
 </head>
