--- a/faktaside.html
+++ b/faktaside.html
@@ -35,18 +35,21 @@
           <div class="blog-post">
             <div class="avsnitt">
               <h3 style="text-align:center;">Avsnitt 1</h3>
-              <p>Morbi laoreet et odio non efficitur. Nulla nec leo sem. Nunc mattis odio ut orci dictum efficitur. Curabitur ac metus in erat semper malesuada ac ac elit. Donec ultrices dui id orci scelerisque sollicitudin. Maecenas eget augue nec
-                odio consequat ultrices eu nec ex. Vivamus pellentesque congue sapien, quis placerat leo auctor sit amet. In rutrum purus vitae odio cursus, eget consequat purus euismod. Quisque aliquam ut augue eget porta. Donec pulvinar mi eget
-                blandit gravida. Vivamus aliquet convallis augue id condimentum. Vestibulum a ultricies nisi, vel placerat ante. Phasellus sed metus neque.</p>
+              <p>Spoofing
+Hva er spoofing?
+“Spoofing” er når en mottaker blir kontaktet fra en kilde de i utgangspunktet er kjent ved og/eller har en opparbeidet tillit til fra før, men som ikke er den de utgir seg for å være. Et spoofing angrep er når en person (som regnes som spooferen/svindleren) later som de er noen andre for å kunne lure andre personer til å dele deres personlige data, eller gjennomføre en handling på vegne av svindleren. For vedkommende som ønsker å spoofe handler mye om å bygge opp en tillit hos vedkommende. Derfor er tilfeller med spoofing ofte et resultat av en lengre periode hvor svindleren bruker tid til å skaffe seg tillit hos vedkommende slik at sannsynligheten for at de lykkes øker.
+
+
+.</p>
             </div>
 
             <div class="avsnittQuiz">
 
               <h4>Avsnitt 1 quiz</h4>
-
-              <input type="radio" class="quiz1" name="1" value="1">1<br>
-              <input type="radio" class="quiz1" name="1" value="2">2<br>
-              <input type="radio" class="quiz1" name="1" value="3">3<br>
+              <p><b>Hva er spoofing?</b></p>
+              <input type="radio" class="quiz1" name="1" value="1">Spoofing handler om å få noe til å forsvinne.<br>
+              <input type="radio" class="quiz1" name="1" value="2">Spoofing handler om å bruke en annens identitet til å få tilgang på informasjon, data osv.<br>
+              <input type="radio" class="quiz1" name="1" value="3">Spoofing er en måte å kommunisere på over internettet uten å bruke en fast ID.<br>
               <button type="button" name="button" onclick="sjekksvar()">Sjekk svar</button>
 
             </div>
