- Lagt til litt mer i første avsnitt faktaside.html

--- a/faktaside.html
+++ b/faktaside.html
@@ -34,7 +34,7 @@
         <div class="col-sm-8 blog-main" style="margin:auto !important;">
           <div class="blog-post">
             <div class="avsnitt">
-              <h3 style="text-align:center;">Avsnitt 1</h3>
+              <h3 style="text-align:center;">Spoofing</h3>
               <p>Spoofing
 Hva er spoofing?
 “Spoofing” er når en mottaker blir kontaktet fra en kilde de i utgangspunktet er kjent ved og/eller har en opparbeidet tillit til fra før, men som ikke er den de utgir seg for å være. Et spoofing angrep er når en person (som regnes som spooferen/svindleren) later som de er noen andre for å kunne lure andre personer til å dele deres personlige data, eller gjennomføre en handling på vegne av svindleren. For vedkommende som ønsker å spoofe handler mye om å bygge opp en tillit hos vedkommende. Derfor er tilfeller med spoofing ofte et resultat av en lengre periode hvor svindleren bruker tid til å skaffe seg tillit hos vedkommende slik at sannsynligheten for at de lykkes øker.
@@ -45,7 +45,7 @@ Hva er spoofing?
 
             <div class="avsnittQuiz">
 
-              <h4>Avsnitt 1 quiz</h4>
+              <h4>Har du fått med deg spoofing?</h4>
               <p><b>Hva er spoofing?</b></p>
               <input type="radio" class="quiz1" name="1" value="1">Spoofing handler om å få noe til å forsvinne.<br>
               <input type="radio" class="quiz1" name="1" value="2">Spoofing handler om å bruke en annens identitet til å få tilgang på informasjon, data osv.<br>
