--- a/faktaside.html
+++ b/faktaside.html
@@ -35,8 +35,7 @@
           <div class="blog-post">
             <div class="avsnitt">
               <h3 style="text-align:center;">Spoofing</h3>
-              <p>Spoofing
-Hva er spoofing?
+              <p>Hva er spoofing?
 “Spoofing” er når en mottaker blir kontaktet fra en kilde de i utgangspunktet er kjent ved og/eller har en opparbeidet tillit til fra før, men som ikke er den de utgir seg for å være. Et spoofing angrep er når en person (som regnes som spooferen/svindleren) later som de er noen andre for å kunne lure andre personer til å dele deres personlige data, eller gjennomføre en handling på vegne av svindleren. For vedkommende som ønsker å spoofe handler mye om å bygge opp en tillit hos vedkommende. Derfor er tilfeller med spoofing ofte et resultat av en lengre periode hvor svindleren bruker tid til å skaffe seg tillit hos vedkommende slik at sannsynligheten for at de lykkes øker.
 
 
@@ -57,22 +56,63 @@ Hva er spoofing?
           </div>
           <div class="blog-post">
             <div class="avsnitt">
-              <h3 style="text-align:center;">Avsnitt 2</h3>
-              <p>Morbi laoreet et odio non efficitur. Nulla nec leo sem. Nunc mattis odio ut orci dictum efficitur. Curabitur ac metus in erat semper malesuada ac ac elit. Donec ultrices dui id orci scelerisque sollicitudin. Maecenas eget augue nec
-                odio consequat ultrices eu nec ex. Vivamus pellentesque congue sapien, quis placerat leo auctor sit amet. In rutrum purus vitae odio cursus, eget consequat purus euismod. Quisque aliquam ut augue eget porta. Donec pulvinar mi eget
-                blandit gravida. Vivamus aliquet convallis augue id condimentum. Vestibulum a ultricies nisi, vel placerat ante. Phasellus sed metus neque.</p>
+              <h3 style="text-align:center;">Former av spoofing</h3>
+              <p>Etter å ha definert hva spoofing er kan man videre se på hvilke former og utgaver som finnes. Først og fremst er telefonen en potensiell og ofte brukt kilde for en svindler. La oss for eksempel si man blir oppringt og personen på den andre enden presenterer seg som en representant fra din bank. Her prøver personen å danne et tillitsbånd til deg via telefonen. Utover i samtalen vil vedkommende kanskje begynne å spørre deg om å dele personopplysninger, kontoopplysninger osv. du ellers aldri ville delt. Her bør det etterhvert gå noen alarmer som sier at her er det noe galt. Det å klare å skjønne når man blir utsatt for et svindler angrep som spoofing er ikke alltid like lett, men man kan unngå dette i stor grad ved bruk av sunn fornuft og tenkte “er dette normalt å spørre om/etter”.
+</p>
             </div>
 
             <div class="avsnittQuiz">
 
-              <h4>Avsnitt 2 quiz</h4>
-
-              <input type="radio" class="quiz1" name="1" value="1">1<br>
-              <input type="radio" class="quiz1" name="1" value="2">2<br>
-              <input type="radio" class="quiz1" name="1" value="3">3<br>
+              <h4>Har du fått med deg spoofing?</h4>
+              <p><b>Er tillit et suksessfaktor for et spoofing angrep? </b></p>
+              <input type="radio" class="quiz1" name="1" value="1">Nei, absolutt ikke. Det siste en svindler trenger for å lykkes er vedkommendes tillit.<br>
+              <input type="radio" class="quiz1" name="1" value="2">Nei, tillit er bare en bonus for svindleren. <br>
+              <input type="radio" class="quiz1" name="1" value="3">Ja, det er tillitsbåndet som på mange måter er avgjørende for at svindleren lykkes.<br>
               <button type="button" name="button" onclick="sjekksvar()">Sjekk svar</button>
 
             </div>
+
+          </div>
+
+          <div class="blog-post">
+            <div class="avsnitt">
+              <h3 style="text-align:center;">Former av spoofing</h3>
+              <p>Som ved mange cyber-angrep/svindler forsøk er det ofte igjennom email det åpner seg opp muligheter. Email er og har blitt et sentralt og viktig verktøy i hverdagen til arbeidslivsnæringen, og også på hjemmefronten. Dette bringer med seg store fordeler, men også ulemper. Med et så lettvint verktøy for kommunikasjon med andre er det klart det blir brukt som en standard hos de aller fleste. Samtidig er også email den kilden man ser er mest utbredt for hackere, svindlere osv. for å trenge inn i andres privatliv.</p>
+
+            </div>
+
+            <div class="avsnittQuiz">
+
+              <h4>Har du fått med deg spoofing?</h4>
+              <p><b>Vi har mange ulike kilder, men via hvilken er det mest vanlig at et cyber-angrep foreløper?</b></p>
+              <input type="radio" class="quiz1" name="1" value="1">Over Telefonen <br>
+              <input type="radio" class="quiz1" name="1" value="2">Via Email <br>
+              <input type="radio" class="quiz1" name="1" value="3">Via Facebook<br>
+              <button type="button" name="button" onclick="sjekksvar()">Sjekk svar</button>
+
+            </div>
+
+          </div>
+
+          <div class="blog-post">
+            <div class="avsnitt">
+              <h3 style="text-align:center;">Former av spoofing</h3>
+              <p>Videre kan man se på spoofing via email som har samme utgangspunkt som et annen type angrep, nemlig “phishing”. Her sendes det mailer ut til brukere hvor avsender (svindleren) gjerne bruker kjente logoer og bilder som skal skape tillit hos mottakerne. Her ønsker de ofte å fremstille seg selv som en representant av kjente banker, bedrifter og/eller aktører i tilknytning av rettssystemer nettopp fordi det skaper tillit hos bruker, samt informasjon av verdi lettere kan lekkes. Samtidig kan det også være at svindleren bruker navn på personer du allerede har en tilknytning til som avsender. Eksempelvis her kan det være en kollega av deg, eller kanskje også sjefen din. Dette skrives det mer om under punktet “phishing”, men det er viktig å vite at spoofing angrep ofte går via email.</p>
+
+            </div>
+
+            <div class="avsnittQuiz">
+
+              <h4>Har du fått med deg spoofing?</h4>
+              <p><b>Hvordan kan man lettest mulig unngå spoofing og andre typer angrep?</b></p>
+              <input type="radio" class="quiz1" name="1" value="1">Bruk sunn fornuft og ta kontakt med fagpersoner ved usikkerhet.<br>
+              <input type="radio" class="quiz1" name="1" value="2">La være å svare de som ringer med “ukjent” nummer. <br>
+              <input type="radio" class="quiz1" name="1" value="3">Det er umulig å unngå spoofing angrep. <br>
+              <button type="button" name="button" onclick="sjekksvar()">Sjekk svar</button>
+
+            </div>
+
+            <h3>Kilder angående spoofing: https://softwarelab.org/what-is-spoofing/</h3>
 
           </div>
         </div>
