--- a/faktaside.html
+++ b/faktaside.html
@@ -36,10 +36,12 @@
             <div class="avsnitt">
               <h3 style="text-align:center;">Spoofing</h3>
               <p>Hva er spoofing?
-“Spoofing” er når en mottaker blir kontaktet fra en kilde de i utgangspunktet er kjent ved og/eller har en opparbeidet tillit til fra før, men som ikke er den de utgir seg for å være. Et spoofing angrep er når en person (som regnes som spooferen/svindleren) later som de er noen andre for å kunne lure andre personer til å dele deres personlige data, eller gjennomføre en handling på vegne av svindleren. For vedkommende som ønsker å spoofe handler mye om å bygge opp en tillit hos vedkommende. Derfor er tilfeller med spoofing ofte et resultat av en lengre periode hvor svindleren bruker tid til å skaffe seg tillit hos vedkommende slik at sannsynligheten for at de lykkes øker.
+                “Spoofing” er når en mottaker blir kontaktet fra en kilde de i utgangspunktet er kjent ved og/eller har en opparbeidet tillit til fra før, men som ikke er den de utgir seg for å være. Et spoofing angrep er når en person (som regnes
+                som spooferen/svindleren) later som de er noen andre for å kunne lure andre personer til å dele deres personlige data, eller gjennomføre en handling på vegne av svindleren. For vedkommende som ønsker å spoofe handler mye om å bygge
+                opp en tillit hos vedkommende. Derfor er tilfeller med spoofing ofte et resultat av en lengre periode hvor svindleren bruker tid til å skaffe seg tillit hos vedkommende slik at sannsynligheten for at de lykkes øker.
 
 
-.</p>
+                .</p>
             </div>
 
             <div class="avsnittQuiz">
@@ -56,9 +58,12 @@
           </div>
           <div class="blog-post">
             <div class="avsnitt">
-              <h3 style="text-align:center;">Former av spoofing</h3>
-              <p>Etter å ha definert hva spoofing er kan man videre se på hvilke former og utgaver som finnes. Først og fremst er telefonen en potensiell og ofte brukt kilde for en svindler. La oss for eksempel si man blir oppringt og personen på den andre enden presenterer seg som en representant fra din bank. Her prøver personen å danne et tillitsbånd til deg via telefonen. Utover i samtalen vil vedkommende kanskje begynne å spørre deg om å dele personopplysninger, kontoopplysninger osv. du ellers aldri ville delt. Her bør det etterhvert gå noen alarmer som sier at her er det noe galt. Det å klare å skjønne når man blir utsatt for et svindler angrep som spoofing er ikke alltid like lett, men man kan unngå dette i stor grad ved bruk av sunn fornuft og tenkte “er dette normalt å spørre om/etter”.
-</p>
+              <h3 style="text-align:center;">Former for spoofing</h3>
+              <p>Etter å ha definert hva spoofing er kan man videre se på hvilke former og utgaver som finnes. Først og fremst er telefonen en potensiell og ofte brukt kilde for en svindler. La oss for eksempel si man blir oppringt og personen på den
+                andre enden presenterer seg som en representant fra din bank. Her prøver personen å danne et tillitsbånd til deg via telefonen. Utover i samtalen vil vedkommende kanskje begynne å spørre deg om å dele personopplysninger,
+                kontoopplysninger osv. du ellers aldri ville delt. Her bør det etterhvert gå noen alarmer som sier at her er det noe galt. Det å klare å skjønne når man blir utsatt for et svindler angrep som spoofing er ikke alltid like lett, men man
+                kan unngå dette i stor grad ved bruk av sunn fornuft og tenkte “er dette normalt å spørre om/etter”.
+              </p>
             </div>
 
             <div class="avsnittQuiz">
@@ -76,8 +81,10 @@
 
           <div class="blog-post">
             <div class="avsnitt">
-              <h3 style="text-align:center;">Former av spoofing</h3>
-              <p>Som ved mange cyber-angrep/svindler forsøk er det ofte igjennom email det åpner seg opp muligheter. Email er og har blitt et sentralt og viktig verktøy i hverdagen til arbeidslivsnæringen, og også på hjemmefronten. Dette bringer med seg store fordeler, men også ulemper. Med et så lettvint verktøy for kommunikasjon med andre er det klart det blir brukt som en standard hos de aller fleste. Samtidig er også email den kilden man ser er mest utbredt for hackere, svindlere osv. for å trenge inn i andres privatliv.</p>
+              <h3 style="text-align:center;">Hvor er det mest vanlig?</h3>
+              <p>Som ved mange cyber-angrep/svindler forsøk er det ofte igjennom email det åpner seg opp muligheter. Email er og har blitt et sentralt og viktig verktøy i hverdagen til arbeidslivsnæringen, og også på hjemmefronten. Dette bringer med
+                seg store fordeler, men også ulemper. Med et så lettvint verktøy for kommunikasjon med andre er det klart det blir brukt som en standard hos de aller fleste. Samtidig er også email den kilden man ser er mest utbredt for hackere,
+                svindlere osv. for å trenge inn i andres privatliv.</p>
 
             </div>
 
@@ -96,8 +103,10 @@
 
           <div class="blog-post">
             <div class="avsnitt">
-              <h3 style="text-align:center;">Former av spoofing</h3>
-              <p>Videre kan man se på spoofing via email som har samme utgangspunkt som et annen type angrep, nemlig “phishing”. Her sendes det mailer ut til brukere hvor avsender (svindleren) gjerne bruker kjente logoer og bilder som skal skape tillit hos mottakerne. Her ønsker de ofte å fremstille seg selv som en representant av kjente banker, bedrifter og/eller aktører i tilknytning av rettssystemer nettopp fordi det skaper tillit hos bruker, samt informasjon av verdi lettere kan lekkes. Samtidig kan det også være at svindleren bruker navn på personer du allerede har en tilknytning til som avsender. Eksempelvis her kan det være en kollega av deg, eller kanskje også sjefen din. Dette skrives det mer om under punktet “phishing”, men det er viktig å vite at spoofing angrep ofte går via email.</p>
+
+              <p>Videre kan man se på spoofing via email som har samme utseende som et annen type angrep, nemlig “phishing”. Her sendes det mailer ut til brukere hvor avsender (svindleren) gjerne bruker kjente logoer og bilder som skal skape
+                tillit hos mottakerne. Her ønsker de ofte å fremstille seg selv som en representant av kjente banker, bedrifter og/eller aktører i tilknytning av rettssystemer nettopp fordi det skaper tillit hos bruker, samt informasjon av verdi
+                lettere kan lekkes. Samtidig kan det også være at svindleren bruker navn på personer du allerede har en tilknytning til som avsender. Eksempelvis her kan det være en kollega av deg, eller kanskje også sjefen din. Mer om phishing senere, men det er viktig å få frem at spoofing også ofte foregår via email.</p>
 
             </div>
 
